--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: mysql:8.1
     volumes: 
       - ./database:/var/lib/mysql
+      - ./sql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: test
       MYSQL_DATABASE: notas_db
