--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8" # version del compose file
 services:
-  web: # servicio web que hemos configurado en el dockerfile (php + apache)
+  web: # servicio web (php + apache)
     container_name: web
     build: .
     volumes:
@@ -8,13 +8,12 @@ services:
     ports:
       - 80:80
   db: # servicio de la base de datos (mysql)
-    container_name: mysql_db
-    image: mysql:8.1
-    volumes: 
-      - ./database:/var/lib/mysql
-      - ./sql:/docker-entrypoint-initdb.d
-    environment:
-      MYSQL_ROOT_PASSWORD: test
-      MYSQL_DATABASE: notas_db
-    ports:
-      - 3306:3306
+      container_name: mysql_db
+      image: mysql:8.1
+      volumes: 
+        - ./sql:/docker-entrypoint-initdb.d
+      environment:
+        MYSQL_ROOT_PASSWORD: test
+        MYSQL_DATABASE: notas_db
+      ports:
+        - 3306:3306
