--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - ./public_html:/var/www/html
     ports:
       - 80
-  db: # servicio de la base de datos (mysql)
+  mysql: # servicio de la base de datos (mysql)
     container_name: mysql_db
     image: mysql:8.1
     volumes: 
